fix: harden semantic migration inventory